--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,9 +8,10 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
 </head>
+
 <body class="bg-gray-100 min-h-screen p-6">
   <div class="max-w-6xl mx-auto bg-white border border-gray-200 rounded-lg shadow-sm p-6 grid md:grid-cols-2 gap-8">
-    
+
     <!-- Left Section -->
     <div>
       <h2 class="text-2xl font-semibold text-gray-800 mb-4">MATsReader</h2>
@@ -17,8 +19,7 @@
         <h3 class="text-lg font-medium text-gray-700 mb-4 flex items-center">
           <svg class="w-5 h-5 mr-2 text-gray-500" fill="none" stroke="currentColor" stroke-width="2"
             viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round"
-              d="M12 20h9m-9-8h9m-9-8h9M4 6h.01M4 12h.01M4 18h.01" />
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 20h9m-9-8h9m-9-8h9M4 6h.01M4 12h.01M4 18h.01" />
           </svg>
           Enter your website address
         </h3>
@@ -33,30 +34,26 @@
       <!-- Tabs -->
       <div class="self-end mb-4">
         <div class="inline-flex bg-gray-200 rounded-full overflow-hidden">
-          <button id="scannerTab"
-            class="px-4 py-2 text-sm font-medium text-gray-600 hover:bg-gray-300 transition"
+          <button id="scannerTab" class="px-4 py-2 text-sm font-medium text-gray-600 hover:bg-gray-300 transition"
             onclick="toggleTab('scanner')">Scanner</button>
-          <button id="qrTab" class="px-4 py-2 text-sm font-medium text-white bg-blue-600"
-            onclick="toggleTab('qr')">QR Code</button>
+          <button id="qrTab" class="px-4 py-2 text-sm font-medium text-white bg-blue-600" onclick="toggleTab('qr')">QR
+            Code</button>
         </div>
       </div>
 
       <!-- QR Code Box -->
-      <div id="qrCodeBox"
-        class="bg-white border border-gray-300 rounded-md p-4 w-full max-w-xs text-center shadow-sm">
-        <img id="qrImage"
-          src=""
-          class="mx-auto w-48 h-48 mb-3 hidden" alt="QR Code" />
+      <div id="qrCodeBox" class="bg-white border border-gray-300 rounded-md p-4 w-full max-w-xs text-center shadow-sm">
+        <img id="qrImage" src="" class="mx-auto w-48 h-48 mb-3 hidden" alt="QR Code" />
         <p id="qrText" class="text-sm text-gray-700 font-medium hidden">Scan this QR Code to preview</p>
-        <p id="qrNote" class="text-xs text-gray-500 hidden">You can customize the design of your QR Code in the next step.</p>
-        <a id="downloadBtn"
-          href="#"
-          download="qr-code.png"
-          class="mt-4 inline-block px-4 py-2 text-sm text-white bg-blue-600 hover:bg-blue-700 rounded shadow hidden">
+        <p id="qrNote" class="text-xs text-gray-500 hidden">You can customize the design of your QR Code in the next
+          step.</p>
+        <button onclick="downloadQRCode()" id="downloadBtn" class="hidden px-4 py-2 bg-blue-600 text-white rounded">
           Download QR Code
-        </a>
+        </button>
+
         <!-- Default Image -->
-        <img id="defaultGif" src="https://miro.medium.com/v2/resize:fit:1400/1*9m-WDdL_ji01bGbjEnutEw.gif" class="w-96 h-48 mx-auto" />
+        <img id="defaultGif" src="https://miro.medium.com/v2/resize:fit:1400/1*9m-WDdL_ji01bGbjEnutEw.gif"
+          class="w-96 h-48 mx-auto" />
       </div>
 
       <!-- Scanner Box -->
@@ -100,12 +97,29 @@
       const qrURL = `https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=${encodedURL}`;
       qrImage.src = qrURL;
       qrImage.classList.remove("hidden");
-      downloadBtn.href = qrURL;
       downloadBtn.classList.remove("hidden");
       qrText.classList.remove("hidden");
       qrNote.classList.remove("hidden");
       defaultGif.classList.add("hidden");
+
+      // Save URL for download
+      downloadBtn.setAttribute("data-url", qrURL);
     });
+
+    function downloadQRCode() {
+      const url = downloadBtn.getAttribute("data-url");
+      fetch(url)
+        .then(res => res.blob())
+        .then(blob => {
+          const a = document.createElement("a");
+          a.href = URL.createObjectURL(blob);
+          a.download = "qr-code.png";
+          document.body.appendChild(a);
+          a.click();
+          document.body.removeChild(a);
+        })
+        .catch(err => alert("Failed to download QR code."));
+    }
 
     function toggleTab(tab) {
       if (tab === 'qr') {
@@ -114,7 +128,7 @@
         qrTab.classList.add("bg-blue-600", "text-white");
         scannerTab.classList.remove("bg-blue-600", "text-white");
         scannerTab.classList.add("text-gray-600");
-        qr.stop().catch(() => {});
+        qr.stop().catch(() => { });
       } else {
         qrBox.classList.add("hidden");
         scannerBox.classList.remove("hidden");
@@ -126,16 +140,13 @@
           if (devices && devices.length) {
             qr.start(
               { facingMode: "environment" },
-              {
-                fps: 10,
-                qrbox: 250
-              },
+              { fps: 10, qrbox: 250 },
               (decodedText) => {
                 inputField.value = decodedText;
                 inputField.dispatchEvent(new Event("input"));
-                toggleTab('qr'); // Switch back to QR view
+                toggleTab('qr');
               },
-              (error) => { /* ignore scan errors */ }
+              (error) => { }
             );
           }
         }).catch(err => {
@@ -147,5 +158,7 @@
     // Default state
     inputField.dispatchEvent(new Event("input"));
   </script>
+
 </body>
+
 </html>
